--- a/env.example
+++ b/env.example
@@ -38,4 +38,5 @@ VITE_LOG_LEVEL=info
 
 # External Services (Optional)
 VITE_GOOGLE_ANALYTICS_ID=
-VITE_SENTRY_DSN= 
+VITE_SENTRY_DSN=
+VITE_PORT=3008
